force-app/main/default/objects/SAC_Config_FormWeb__mdt/SAC_Config_FormWeb__mdt.object-meta.xml
<CustomObject>
    <description>Configuración para la entrada de casos por formularios web de SAC</description>
    <label>Configuración Formulario Web SAC</label>
    <pluralLabel>Configuración Formularios Web SAC</pluralLabel>
</CustomObject>