force-app/main/default/objects/SAC_Config_FormWeb__mdt/fields/CC_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Aplicacion__c</fullName>
    <description>Aplicación asociada al formulario web.</description>
    <label>Aplicación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>