force-app/main/default/objects/SAC_Config_FormWeb__mdt/fields/CC_CasoEstado__c.field-meta.xml
<CustomField>
    <fullName>CC_CasoEstado__c</fullName>
    <description>Estado del caso a crear</description>
    <label>Estado caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>