force-app/main/default/objects/SAC_Config_FormWeb__mdt/fields/CC_MotivosExcl__c.field-meta.xml
<CustomField>
    <fullName>CC_MotivosExcl__c</fullName>
    <description>Motivos de formulario a excluir</description>
    <label>Motivos a excluir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>