force-app/main/default/objects/SAC_Config_FormWeb__mdt/fields/CC_Tiempo_Duplicidad__c.field-meta.xml
<CustomField>
    <fullName>CC_Tiempo_Duplicidad__c</fullName>
    <label>Tiempo duplicidad (minutos)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>